--- a/frontend-cemos/public/assets/content/direito/7-sanremo/1.md
+++ b/frontend-cemos/public/assets/content/direito/7-sanremo/1.md
@@ -1,7 +1,6 @@
 ## Página 1
 
-San Remo Manual  em Direito Internacional  Aplicável a  Conflitos armados no mar  
-(12 de junho de 1994)  
+San Remo Manual  em Direito Internacional  Aplicável a  Conflitos armados no mar  (12 de junho de 1994)  
  
 CONTEÚDO  
 NOTA INTRODUTÓRIA  
@@ -32,8 +31,7 @@ Seção I Meios de guerra ( 78-92)
 Seção II Métod os de guerra ( 93-108) 
 Seção III Enganação, artifícios de guerra e perfídia ( 109-111) 
  
-PARTE V MEDIDAS CURTAS DE ATAQUE: INTERCEPÇÃO, VISITA, PESQUISA,  
-DIVERSÃO E CAPTURA  
+PARTE V MEDIDAS CURTAS DE ATAQUE: INTERCEPÇÃO, VISITA, PESQUISA, DIVERSÃO E CAPTURA  
 Seção I Determinação do caráter inimigo de embarcações e aeronaves ( 112-117) 
 Seção II Visita e busca de embarcações mercantes ( 118-124) 
 Seção III Intercepção, visita e busca de aeronaves civis  (125-134) 
@@ -54,75 +52,34 @@ Seção III Aeronaves médicas ( 174-183)
 
 NOTA INTRODUTÓRIA  
  
-O Manual de San Remo  foi preparado durante o período 1988 -1994 por um grupo de especialistas  jurídicos 
-e navais que participam de suas capac idades pessoais  em uma série de  mesas red ondas convocadas pelo 
-Instituto Internacional de Direito Humanitário. O objetivo do manual  é fornecer uma reformulação 
-contemporânea do direito internacional aplicável a conflitos armados no mar. O manual  inclui algumas 
-disposições  que podem ser considerad os desenvolvimentos progressivos da lei, mas considera -se que a 
-maioria de suas dispo sições declara a lei que é  atualmente aplicável. O Manual  é visto pelos participantes 
-das Mesas -Redondas como sendo, em muitos aspectos, um equivalente moderno a  o Manual de Oxford 
-sobre as leis da guerra naval que regem as relações entre beligerantes,  adotado pelo Institute of 
-International  Lei em 1913. Um manua l contemporâneo foi considerado necessário devido aos 
-desenvolvimentos na lei desde 1913 que, para a ma ior parte não foi incorporada na recente lei de tratados, 
-sendo a Segunda Convenção de Genebra de 1949 essencialmente limitada à  proteção dos feridos, doentes 
-e naufrágios no mar. Em particular, não houve um desenvolvimento da lei de conflitos armados  no mar, 
-semelh ante ao da lei de conflitos armados em terra, com a conclusão do Protocolo I de 1977 adicional ao 
-de Genebra  Convenções de 1949. Embora algum as das disposições do Protocolo Adicional I afetem as 
-operações navais, em particular as  completando a proteção dad a a embarcações e aeronaves médicas na 
-Segunda Convenção de Genebra de 1949, Parte IV do Protocolo,  que protege civis contra os efeitos das 
-hostilidades, é aplicável apenas a operações navais que afetam civis e civis  objetos em terra.  
+O Manual de San Remo foi preparado durante o período 1988 -1994 por um grupo de especialistas jurídicos e navais que participam de suas capacidades pessoais em uma série de mesas redondas convocadas pelo Instituto Internacional de Direito Humanitário. O objetivo do manual é fornecer uma reformulação contemporânea do direito internacional aplicável a conflitos armados no mar. O manual inclui algumas disposições que podem ser considerad os desenvolvimentos progressivos da lei, mas considera-se que a maioria de suas disposições declara a lei que é atualmente aplicável. O Manual é visto pelos participantes das Mesas-Redondas como sendo, em muitos aspectos, um equivalente moderno a o Manual de Oxford sobre as leis da guerra naval que regem as relações entre beligerantes,  adotado pelo Institute of International Lei em 1913. Um manual contemporâneo foi considerado necessário devido aos desenvolvimentos na lei desde 1913 que, para a maior parte não foi incorporada na recente lei de tratados, sendo a Segunda Convenção de Genebra de 1949 essencialmente limitada à proteção dos feridos, doentes e naufrágios no mar. Em particular, não houve um desenvolvimento da lei de conflitos armados  no mar, semelh ante ao da lei de conflitos armados em terra, com a conclusão do Protocolo I de 1977 adicional ao de Genebra  Convenções de 1949. Embora algum as das disposições do Protocolo Adicional I afetem as operações navais, em particular as  completando a proteção dada a embarcações e aeronaves médicas na Segunda Convenção de Genebra de 1949, Parte IV do Protocolo,  que protege civis contra os efeitos das hostilidades, é aplicável apenas a operações navais que afetam civis e civis  objetos em terra.  
  
-Uma Mesa Redonda pre liminar sobre Direito Internacional Humanitário Aplicável aos Conflitos Armados 
-no Mar, realizada em San Remo em 1987 e  convocada pelo Institu to Internacional de Direito  Humanitário, 
-em cooperação com o Instituto de Direito Internacional da Univ ersidade  de Pisa (Itália) e da Universidade 
-de Siracusa (EUA), realizaram uma revisão inicial da lei. A Mesa Redonda de Madri, convocada p elo 
-Instituto Internacional de Direito Humanitário, em 1988, desenvolveu um plano de ação para redigir uma 
-reformulaç ão contempor ânea da lei de  conflito armado no mar. Em conformidade com seu mandato de 
-preparar desenvolvimentos no Direito Internacional Humanitário, o Comitê da Cruz Vermelha apoiou todo 
-esse projeto. Para implementar o Plano de Ação de Madri, o Institu to realizou  mesas-redondas anuais que 
-se reuniram em Bochum em 1989, em Toulon em 1990, em Bergen em 1991, em Ottawa em 1992, em 
-Genebra em 1993 e  finalm ente em Livorno, em 1994. Baseando -se em relatórios detalhados feitos pelos 
-relatores entre as reuniões , comentários a participantes e cuidadosa discussão durante as reuniões, esses 
-grupos redigiram o Manual,  adotado em Livorno em junho de 1994.  
+Uma Mesa Redonda preliminar sobre Direito Internacional Humanitário Aplicável aos Conflitos Armados no Mar, realizada em San Remo em 1987 e convocada pelo Institu to Internacional de Direito  Humanitário, em cooperação com o Instituto de Direito Internacional da Universidade  de Pisa (Itália) e da Universidade de Siracusa (EUA), realizaram uma revisão inicial da lei. A Mesa Redonda de Madri, convocada pelo Instituto Internacional de Direito Humanitário, em 1988, desenvolveu um plano de ação para redigir uma reformulação contempor ânea da lei de  conflito armado no mar. Em conformidade com seu mandato de preparar desenvolvimentos no Direito Internacional Humanitário, o Comitê da Cruz Vermelha apoiou todo esse projeto. Para implementar o Plano de Ação de Madri, o Institu to realizou  mesas-redondas anuais que se reuniram em Bochum em 1989, em Toulon em 1990, em Bergen em 1991, em Ottawa em 1992, em Genebra em 1993 e  finalm ente em Livorno, em 1994. Baseando-se em relatórios detalhados feitos pelos relatores entre as reuniões , comentários a participantes e cuidadosa discussão durante as reuniões, esses grupos redigiram o Manual,  adotado em Livorno em junho de 1994.  
  
-A explicaç ão relacionada foi preparada por um grupo principal de especialistas que também foram os  
-relatores das mesas redonda s. O manual  deve ser lido junto com esta explicação  para uma compreensão 
-completa das disposições do manual  . 
+A explicação relacionada foi preparada por um grupo principal de especialistas que também foram os relatores das mesas redondas. O manual  deve ser lido junto com esta explicação  para uma compreensão completa das disposições do manual. 
  
-O texto autêntico do manual  é em inglês.  
+O texto autêntico do manual é em inglês.  
  
-PARTE I: DISPOSIÇÕES GERAIS  
+## PARTE I: DISPOSIÇÕES GERAIS  
  
-SEÇÃO I: ÂMBITO DE APLICAÇÃO DA LEI  
+### SEÇÃO I: ÂMBITO DE APLICAÇÃO DA LEI  
  
-1. As partes de um conflito armado no  mar estão sujeitas aos princípios e regras do direito internacional 
-humanitário de sde o  momento em que a força armada é usada.  
+1. As partes de um conflito armado no  mar estão sujeitas aos princípios e regras do direito internacional humanitário desde o  momento em que a força armada é usada.  
  
-2. Nos casos não cobertos por este documento ou por acordos internacionais, civis e combatent es 
-permanecem so b a proteção e aut oridade dos princípios do direito internacional derivados dos costumes 
-estabelecidos, dos princípios da  humanidade e dos ditames da consciência pública.
+2. Nos casos não cobertos por este documento ou por acordos internacionais, civis e combatentes permanecem sob a proteção e aut oridade dos princípios do direito internacional derivados dos costumes estabelecidos, dos princípios da  humanidade e dos ditames da consciência pública.
 
----
 
 ## Página 3
 
-SEÇÃO II: CONFLITOS ARMADOS E LEI DA AUTO -DEFESA  
+### SEÇÃO II: CONFLITOS ARMADOS E LEI DA AUTO-DEFESA  
  
-3. O exercício do di reito de legítim a defesa individ ual ou coletiva , reconhecido no artigo 51 da Carta das 
-Nações Unidas  está sujeita  às condições e limitações estabelecidas na Carta e decorrentes do direito  
-internacional geral,  incluindo, em particular, os princípi os da necessidad e e da proporcionalidade.  
+3. O exercício do direito de legítima defesa individual ou coletiva , reconhecido no artigo 51 da Carta das Nações Unidas  está sujeita  às condições e limitações estabelecidas na Carta e decorrentes do direito internacional geral,  incluindo, em particular, os princípi os da necessidade e da proporcionalidade.  
  
-4. Os princípios de necessidade e proporcionalidade se aplicam igualmente aos conflitos armados no 
-mar e exigem que a conduta de  hostilidades pelo Estado não devem exceder o grau e o tipo de força, 
-por outo lado não é proibida  pela lei das ar mas armadas  conflito , necessário para repelir um ataque 
-armado contra ele e  restaurar sua segurança.  
+4. Os princípios de necessidade e proporcionalidade se aplicam igualmente aos conflitos armados no mar e exigem que a conduta de  hostilidades pelo Estado não devem exceder o grau e o tipo de força, por outo lado não é proibida  pela lei das ar mas armadas  conflito , necessário para repelir um ataque armado contra ele e  restaurar sua segurança.  
  
-5. Até que ponto um Estado é justificado em suas ações militares contra o inimigo dependerá da  intensidade 
-e escala do  ataque armado pelo q ual o inimigo é responsável e a gravidade da ameaça representada.  
+5. Até que ponto um Estado é justificado em suas ações militares contra o inimigo dependerá da  intensidade e escala do  ataque armado pelo q ual o inimigo é responsável e a gravidade da ameaça representada.  
  
-6. As regras estabelecidas neste documento e quaisquer outras regras do Direito Internacional  Humanitário 
-aplicam -se igualmente a todos  partes no conflito. A aplicação igual dessas regras a todas as partes em 
-conflito  não será afetada pela  responsabilidade internacional que possa ter sido incorrida por qualquer um 
+6. As regras estabelecidas neste documento e quaisquer outras regras do Direito Internacional  Humanitário aplicam -se igualmente a todos  partes no conflito. A aplicação igual dessas regras a todas as partes em conflito  não será afetada pela  responsabilidade internacional que possa ter sido incorrida por qualquer um 
 deles pela eclosão do conflito.  
  
 SEÇÃO III: CONFLITOS ARMADOS EM QUE O CONSELHO DE SEGURANÇA TOMO U AÇÃO  
@@ -1347,5 +1304,3 @@ de inspecionado, e se  determ inado de fato como uma aeronave médica, será per
 ocupantes deverão,  salvo acordo em contrário entre o Estado neutro e as partes no con flito, seja detido no 
 Estado neutro  quando exigido pelas regras do direito internacional aplicáveis em conflitos armados, de 
 maneira que não possam  novamente participe das hostilidades.
-
----
