--- a/frontend-cemos/public/assets/content/intendencia/16-lei14133/L14133.md
+++ b/frontend-cemos/public/assets/content/intendencia/16-lei14133/L14133.md
@@ -224,13 +224,9 @@ c) identificação dos tipos de serviços a executar e dos materiais e equipamen
 
 d) informações que possibilitem o estudo e a definição de métodos construtivos, de instalações provisórias e de condições organizacionais para a obra, sem frustrar o caráter competitivo para a sua execução;
 
-e) subsídios para montagem do plano de licitação e gestão da obra, compreendidos a sua programação, a
-
----
+e) subsídios para montagem do plano de licitação e gestão da obra, compreendidos a sua programação, a estratégia de suprimentos, as normas de fiscalização e outros dados necessários em cada caso;
 
 ## Página 6
-
-estratégia de suprimentos, as normas de fiscalização e outros dados necessários em cada caso;
 
 f) orçamento detalhado do custo global da obra, fundamentado em quantitativos de serviços e fornecimentos propriamente avaliados, obrigatório exclusivamente para os regimes de execução previstos nos incisos |, III IV e VIl do caput do art. 46 desta Lei;
 
